--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -12,7 +12,7 @@
   
   <filter-mapping>
     <filter-name>LogoutFilter</filter-name>
-    <url-pattern>/app/logout</url-pattern>
+    <url-pattern>/logout</url-pattern>
   </filter-mapping>
   
   <!--  Pushes the session id into the Log4J NDC for each request thread. The NDC is a Stack that is dumped to the log 
@@ -24,7 +24,7 @@
   </filter>
   <filter-mapping>
     <filter-name>Log4jNdcFilter</filter-name>
-    <url-pattern>/app/*</url-pattern>
+    <url-pattern>/*</url-pattern>
   </filter-mapping> 
   
   <!--  Enforces UTF-8 character encoding on all requests. --> 
@@ -35,7 +35,7 @@
   
   <filter-mapping>
     <filter-name>Utf8RequestEncodingFilter</filter-name>
-    <url-pattern>/app/*</url-pattern>
+    <url-pattern>/*</url-pattern>
   </filter-mapping>
  
   <!--  Handles redirect back to login for an unauthenticated user accessing content that requires stateful authentication 
@@ -44,17 +44,17 @@
     <filter-class>edu.ucla.cens.awserver.jee.filter.AuthenticationFilter</filter-class>
     <init-param>
       <param-name>loginRedirectUrl</param-name>
-      <param-value>/app/login.jsp</param-value>
+      <param-value>/login.jsp</param-value>
     </init-param>
     <init-param>
       <param-name>loginServletUrl</param-name>
-      <param-value>/app/login</param-value>
+      <param-value>/login</param-value>
     </init-param>
     <init-param>
       <param-name>ajaxUrls</param-name>
   --><!--
        To add a URL, make this a comma-separated list 
-      <param-value>/app/q/ema,/app/q/percent-successful-location-updates,/app/q/completed-surveys-per-day,/app/q/mobility-modes-per-day,/app/q/hours-since-last-survey,/app/q/hours-since-last-update</param-value>
+      <param-value>/q/ema,/q/percent-successful-location-updates,/q/completed-surveys-per-day,/q/mobility-modes-per-day,/q/hours-since-last-survey,/q/hours-since-last-update</param-value>
     </init-param>
   </filter>
   -->
@@ -123,7 +123,7 @@
 
   <servlet-mapping>
     <servlet-name>default</servlet-name>
-    <url-pattern>/app/logout</url-pattern>
+    <url-pattern>/logout</url-pattern>
   </servlet-mapping>
   
   <servlet-mapping>
@@ -165,11 +165,11 @@
     <servlet-class>edu.ucla.cens.awserver.jee.servlet.AwJspServlet</servlet-class>
     <init-param>
       <param-name>successfulRequestRedirectUrl</param-name>
-      <param-value>/app/viz.jsp</param-value>
+      <param-value>/viz.jsp</param-value>
     </init-param>
     <init-param>
       <param-name>failedRequestRedirectUrl</param-name>
-      <param-value>/app/login.jsp</param-value>
+      <param-value>/login.jsp</param-value>
     </init-param>
     -->
     <!--  The following init-params are used to map the servlet to Spring-configured beans that ultimately service the request. 
@@ -193,7 +193,7 @@
   
   <servlet-mapping>
     <servlet-name>Login</servlet-name>
-    <url-pattern>/app/login</url-pattern>
+    <url-pattern>/login</url-pattern>
   </servlet-mapping>
   -->
   
@@ -225,7 +225,7 @@
   
   <servlet-mapping>
     <servlet-name>MobilityUploadServlet</servlet-name>
-    <url-pattern>/app/u/mobility</url-pattern>
+    <url-pattern>/u/mobility</url-pattern>
   </servlet-mapping>
  
  <!--  Survey Data Upload -->
@@ -256,7 +256,7 @@
   
   <servlet-mapping>
     <servlet-name>SurveyUploadServlet</servlet-name>
-    <url-pattern>/app/u/survey</url-pattern>
+    <url-pattern>/u/survey</url-pattern>
   </servlet-mapping>
   
   <!--  Media Data Upload -->
@@ -287,7 +287,7 @@
   
   <servlet-mapping>
     <servlet-name>MediaUploadServlet</servlet-name>
-    <url-pattern>/app/u/media</url-pattern>
+    <url-pattern>/u/media</url-pattern>
   </servlet-mapping>
    
   <!--  
@@ -322,7 +322,7 @@
   
   <servlet-mapping>
     <servlet-name>AuthStatelessServlet</servlet-name>
-    <url-pattern>/app/auth</url-pattern>
+    <url-pattern>/auth</url-pattern>
   </servlet-mapping>
   
   <!--  
@@ -359,7 +359,7 @@
   
   <servlet-mapping>
     <servlet-name>AuthTokenServlet</servlet-name>
-    <url-pattern>/app/auth_token</url-pattern>
+    <url-pattern>/auth_token</url-pattern>
   </servlet-mapping>
   
   <!--  handle configuration queries  -->
@@ -394,7 +394,7 @@
   
   <servlet-mapping>
     <servlet-name>ConfigRetrievalServlet</servlet-name>
-    <url-pattern>/app/q/config</url-pattern>
+    <url-pattern>/q/config</url-pattern>
   </servlet-mapping>
   
   
@@ -428,7 +428,7 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>DataPointQueryServlet</servlet-name>
-    <url-pattern>/app/q/dp</url-pattern>
+    <url-pattern>/q/dp</url-pattern>
   </servlet-mapping>
   
   
@@ -461,7 +461,7 @@
   
   <servlet-mapping>
     <servlet-name>SuccessfulLocationUpdatesQueryServlet</servlet-name>
-    <url-pattern>/app/q/percent-successful-location-updates</url-pattern>
+    <url-pattern>/q/percent-successful-location-updates</url-pattern>
   </servlet-mapping>
   -->
   
@@ -500,7 +500,7 @@
   
   <servlet-mapping>
     <servlet-name>PromptGroupCountQueryServlet</servlet-name>
-    <url-pattern>/app/q/completed-surveys-per-day</url-pattern>
+    <url-pattern>/q/completed-surveys-per-day</url-pattern>
   </servlet-mapping>
   -->
   
@@ -532,7 +532,7 @@
   
   <servlet-mapping>
     <servlet-name>MobilityModeCountQueryServlet</servlet-name>
-    <url-pattern>/app/q/mobility-modes-per-day</url-pattern>
+    <url-pattern>/q/mobility-modes-per-day</url-pattern>
   </servlet-mapping>
   -->
   
@@ -564,7 +564,7 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>MostRecentSurveyQueryServlet</servlet-name>
-    <url-pattern>/app/q/hours-since-last-survey</url-pattern>
+    <url-pattern>/q/hours-since-last-survey</url-pattern>
   </servlet-mapping>
   -->
   
@@ -596,7 +596,7 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>MostRecentActivityQueryServlet</servlet-name>
-    <url-pattern>/app/q/hours-since-last-update</url-pattern>
+    <url-pattern>/q/hours-since-last-update</url-pattern>
   </servlet-mapping>
   -->
   
@@ -607,12 +607,12 @@
    
   <error-page>
     <error-code>500</error-code>
-    <location>/app/server_error.jsp</location>
+    <location>/server_error.jsp</location>
   </error-page>
    
   <error-page>
     <error-code>404</error-code>
-    <location>/app/file_not_found.html</location>
+    <location>/file_not_found.html</location>
   </error-page>   
   
   <!-- Parameter with comma separated list of files (or patterns) that tells Spring where to pick up bean configurations. -->
