--- a/web/WEB-INF/classes/log4j.properties
+++ b/web/WEB-INF/classes/log4j.properties
@@ -1,13 +1,17 @@
 # The root logger 
 log4j.rootLogger=DEBUG, root
-log4j.appender.root=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.root=org.apache.log4j.RollingFileAppender
 log4j.appender.root.File=${catalina.base}/logs/aw.log
 log4j.appender.root.layout=org.apache.log4j.PatternLayout
+log4j.appender.root.MaxFileSize=1MB
+log4j.appender.root.MaxBackupIndex=30
 
 # Define the appender for logging of sensor data uploads
-log4j.appender.upload=org.apache.log4j.FileAppender
+log4j.appender.upload=org.apache.log4j.RollingFileAppender
 log4j.appender.upload.File=${catalina.base}/logs/upload.log
 log4j.appender.upload.layout=org.apache.log4j.PatternLayout
+log4j.appender.upload.MaxFileSize=1MB
+log4j.appender.upload.MaxBackupIndex=30
 # Define the upload logger name
 log4j.logger.uploadLogger=INHERIT, upload
 # Don't log upload messages to the root logger
@@ -17,6 +21,6 @@ log4j.additivity.uploadLogger=false
 log4j.appender.root.layout.ConversionPattern=%d [%t] [%x] [%p] [%c] - %m%n
 log4j.appender.upload.layout.ConversionPattern=%d [%t] [%x] [%p] - %m%n
 
-# Loggers based on Java package name, inherit root logger settings
+# Set log level based on Java package name (impacts root logger)
 log4j.logger.edu.ucla.cens=DEBUG
 log4j.logger.org.springframework=INFO
