--- a/web/WEB-INF/classes/log4j.properties
+++ b/web/WEB-INF/classes/log4j.properties
@@ -1,17 +1,20 @@
 # The root logger 
 log4j.rootLogger=DEBUG, root
-log4j.appender.root=org.apache.log4j.RollingFileAppender
+log4j.appender.root=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.root.File=${catalina.base}/logs/aw.log
 log4j.appender.root.layout=org.apache.log4j.PatternLayout
-log4j.appender.root.MaxFileSize=1MB
-log4j.appender.root.MaxBackupIndex=30
+# For use with RollingFileAppender
+#log4j.appender.root.MaxFileSize=1MB
+#log4j.appender.root.MaxBackupIndex=30
 
 # Define the appender for logging of sensor data uploads
-log4j.appender.upload=org.apache.log4j.RollingFileAppender
+log4j.appender.upload=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.upload.File=${catalina.base}/logs/upload.log
 log4j.appender.upload.layout=org.apache.log4j.PatternLayout
-log4j.appender.upload.MaxFileSize=1MB
-log4j.appender.upload.MaxBackupIndex=30
+# For use with RollingFileAppender
+#log4j.appender.upload.MaxFileSize=1MB
+#log4j.appender.upload.MaxBackupIndex=30
+
 # Define the upload logger name
 log4j.logger.uploadLogger=INHERIT, upload
 # Don't log upload messages to the root logger
