--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -401,7 +401,7 @@
   <!--  Handle data point queries -->
   <servlet>
     <description>
-      runs data point queries (survey response data, mobility data, upload stats) 
+      runs data point queries (survey response data, mobility data) 
     </description>
     <servlet-name>DataPointQueryServlet</servlet-name>
     <servlet-class>edu.ucla.cens.awserver.jee.servlet.AwDataServlet</servlet-class>
@@ -464,174 +464,38 @@
     <url-pattern>/q/us</url-pattern>
   </servlet-mapping>
   
-  <!--  Handle location update queries 
+   <!--  Handle image queries -->
   <servlet>
     <description>
-      Runs queries for the percentage of successful location updates per day. 
+      runs image queries 
     </description>
-    <servlet-name>SuccessfulLocationUpdatesQueryServlet</servlet-name>
+    <servlet-name>ImageQueryServlet</servlet-name>
     <servlet-class>edu.ucla.cens.awserver.jee.servlet.AwDataServlet</servlet-class>
-   -->
     <!--  The following init-params are used to map the servlet to Spring-configured beans that ultimately service the request. 
           The param-value elements are Spring bean ids.    
     -->
-    <!--
     <init-param>
       <param-name>controllerName</param-name>
-      <param-value>successfulLocationUpdatesQueryController</param-value>
+      <param-value>imageQueryController</param-value>
     </init-param>
     <init-param>
       <param-name>awRequestCreatorName</param-name>
-      <param-value>userOnlyAwRequestCreator</param-value>
-    </init-param>
-    <init-param>
-      <param-name>responseWriterName</param-name>
-      <param-value>successfulLocationUpdatesQueryResponseWriter</param-value> 
-    </init-param>
-    <load-on-startup>1</load-on-startup>
-  </servlet>
-  
-  <servlet-mapping>
-    <servlet-name>SuccessfulLocationUpdatesQueryServlet</servlet-name>
-    <url-pattern>/q/percent-successful-location-updates</url-pattern>
-  </servlet-mapping>
-  -->
-  
-  <!--  Handle completed surveys queries -->
-  <!--
-  <servlet>
-    <description>
-      Runs queries for the number of completed prompt groups per day. 
-    </description>
-    <servlet-name>PromptGroupCountQueryServlet</servlet-name>
-    <servlet-class>edu.ucla.cens.awserver.jee.servlet.AwDataServlet</servlet-class>
-    -->
-    <!--  The following init-params are used to map the servlet to Spring-configured beans that ultimately service the request. 
-          The param-value elements are Spring bean ids.    
-    -->
-    <!--
-    <init-param>
-      <param-name>controllerName</param-name>
-      <param-value>promptGroupCountQueryController</param-value>
-    </init-param>
-     <init-param>
-      <param-name>awRequestCreatorName</param-name> --> <!-- note: shared with EMA query -->
-    <!--
-      <param-value>emaQueryAwRequestCreator</param-value>
+      <param-value>imageQueryAwRequestCreator</param-value>
     </init-param>
     <init-param>
       <param-name>httpServletRequestValidatorName</param-name>
-      <param-value>startAndEndDateHttpServletRequestValidator</param-value>
+      <param-value>imageQueryHttpServletRequestValidator</param-value>
     </init-param>
     <init-param>
       <param-name>responseWriterName</param-name>
-      <param-value>promptGroupCountQueryResponseWriter</param-value> 
-    </init-param>
-    <load-on-startup>1</load-on-startup>
-  </servlet>
-  
-  <servlet-mapping>
-    <servlet-name>PromptGroupCountQueryServlet</servlet-name>
-    <url-pattern>/q/completed-surveys-per-day</url-pattern>
-  </servlet-mapping>
-  -->
-  
-  <!--  Handle mobility mode count queries 
-  <servlet>
-    <description>
-      Runs queries for the aggregate number of mobility modes per day 
-    </description>
-    <servlet-name>MobilityModeCountQueryServlet</servlet-name>
-    <servlet-class>edu.ucla.cens.awserver.jee.servlet.AwDataServlet</servlet-class>
-    <init-param>
-      <param-name>controllerName</param-name>
-      <param-value>mobilityModeCountQueryController</param-value>
-    </init-param>
-     <init-param>
-      <param-name>awRequestCreatorName</param-name> 
-      <param-value>emaQueryAwRequestCreator</param-value>
-    </init-param>
-    <init-param>
-      <param-name>httpServletRequestValidatorName</param-name>
-      <param-value>startAndEndDateHttpServletRequestValidator</param-value>
-    </init-param>
-    <init-param>
-      <param-name>responseWriterName</param-name>
-      <param-value>mobilityModeCountQueryResponseWriter</param-value> 
-    </init-param>
-    <load-on-startup>1</load-on-startup>
-  </servlet>
-  
-  <servlet-mapping>
-    <servlet-name>MobilityModeCountQueryServlet</servlet-name>
-    <url-pattern>/q/mobility-modes-per-day</url-pattern>
-  </servlet-mapping>
-  -->
-  
-  <!--  Handle hours since last survey queries
-  <servlet>
-    <description>
-      Runs queries to determine the hours since the last survey
-    </description>
-    <servlet-name>MostRecentSurveyQueryServlet</servlet-name>
-    <servlet-class>edu.ucla.cens.awserver.jee.servlet.AwDataServlet</servlet-class>
-   -->
-    <!--  The following init-params are used to map the servlet to Spring-configured beans that ultimately service the request. 
-          The param-value elements are Spring bean ids.    
-    -->
-    <!--
-    <init-param>
-      <param-name>controllerName</param-name>
-      <param-value>mostRecentSurveyQueryController</param-value>
-    </init-param>
-     <init-param>
-      <param-name>awRequestCreatorName</param-name> --><!-- note: shared with successful location updates query --><!--
-      <param-value>userOnlyAwRequestCreator</param-value>
-    </init-param>
-    <init-param>
-      <param-name>responseWriterName</param-name>
-      <param-value>mostRecentSurveyQueryResponseWriter</param-value> 
+      <param-value>successOrFailResponseWriter</param-value>
     </init-param>
     <load-on-startup>1</load-on-startup>
   </servlet>
   <servlet-mapping>
-    <servlet-name>MostRecentSurveyQueryServlet</servlet-name>
-    <url-pattern>/q/hours-since-last-survey</url-pattern>
+    <servlet-name>ImageQueryServlet</servlet-name>
+    <url-pattern>/q/i</url-pattern>
   </servlet-mapping>
-  -->
-  
-   <!--  Handle hours since last survey queries 
-  <servlet>
-    <description>
-      Runs queries to determine the hours since the last survey or mobility message
-    </description>
-    <servlet-name>MostRecentActivityQueryServlet</servlet-name>
-    <servlet-class>edu.ucla.cens.awserver.jee.servlet.AwDataServlet</servlet-class>
-    -->
-    <!--  The following init-params are used to map the servlet to Spring-configured beans that ultimately service the request. 
-          The param-value elements are Spring bean ids.    
-    -->
-    <!--
-    <init-param>
-      <param-name>controllerName</param-name>
-      <param-value>mostRecentActivityQueryController</param-value>
-    </init-param>
-     <init-param>
-      <param-name>awRequestCreatorName</param-name>--> <!-- note: shared with successful location updates query --><!--
-      <param-value>userOnlyAwRequestCreator</param-value>
-    </init-param>
-    <init-param>
-      <param-name>responseWriterName</param-name>
-      <param-value>mostRecentActivityQueryResponseWriter</param-value> 
-    </init-param>
-    <load-on-startup>1</load-on-startup>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>MostRecentActivityQueryServlet</servlet-name>
-    <url-pattern>/q/hours-since-last-update</url-pattern>
-  </servlet-mapping>
-  -->
-  
   
   <!-- For AW 2.x and up, the server app is effectively headless. There is probably a better way to return headers only.
        empty.html is returned in order override the default Tomcat error pages. It is rarely a good idea to give away 
