turned off verbose debug logging in JsonUtils and UserBin

--- a/web/WEB-INF/classes/log4j.properties
+++ b/web/WEB-INF/classes/log4j.properties
@@ -27,3 +27,5 @@ log4j.appender.upload.layout.ConversionPattern=%d [%t] [%x] [%p] - %m%n
 # Set log level based on Java package name (impacts root logger)
 log4j.logger.edu.ucla.cens=DEBUG
 log4j.logger.org.springframework=INFO
+log4j.logger.edu.ucla.cens.util=INFO
+log4j.logger.edu.ucla.cens.awserver.cache.UserBin=INFO
