--- a/build.xml
+++ b/build.xml
@@ -42,6 +42,13 @@
     <include name="jackson-all-1.9.7.jar"/>
     <include name="js.jar"/>
     <include name="catalina-2012-09-10.jar"/>
+    <include name="spring-security-oauth2-1.0.0.RC3.jar"/>
+
+    <include name="amber-oauth2-authzserver-0.22-incubating.jar"/>
+    <include name="amber-oauth2-common-0.22-incubating.jar"/>
+    <include name="amber-oauth2-resourceserver-0.22-incubating.jar"/>
+    <include name="slf4j-api-1.6.1.jar"/>
+    <include name="jettison-1.2.jar"/>
   </fileset>
 
   <fileset id="run-dependencies" dir="${library}">
@@ -70,6 +77,25 @@
     <include name="joda-time-2.1.jar"/>
   	<include name="jackson-all-1.9.7.jar"/>
     <include name="js.jar"/>
+
+    <include name="spring-security-config-3.1.3.RELEASE.jar"/>
+    <include name="spring-security-core-3.1.3.RELEASE.jar"/>
+    <include name="spring-security-oauth2-1.0.0.RC3.jar"/>
+    <include name="spring-security-openid-3.1.3.RELEASE.jar"/>
+    <include name="spring-security-web-3.1.3.RELEASE.jar"/>
+    <include name="spring-security-oauth2-1.0.0.RC3.jar"/>
+    <include name="spring-security-acl-3.1.3.RELEASE.jar"/>
+    <include name="spring-security-cas-3.1.3.RELEASE.jar"/>
+    <include name="spring-security-crypto-3.1.3.RELEASE.jar"/>
+    <include name="spring-security-ldap-3.1.3.RELEASE.jar"/>
+    <include name="spring-security-remoting-3.1.3.RELEASE.jar"/>
+    <include name="spring-security-taglibs-3.1.3.RELEASE.jar"/>
+
+    <include name="amber-oauth2-authzserver-0.22-incubating.jar"/>
+    <include name="amber-oauth2-common-0.22-incubating.jar"/>
+    <include name="amber-oauth2-resourceserver-0.22-incubating.jar"/>
+    <include name="slf4j-api-1.6.1.jar"/>
+    <include name="jettison-1.2.jar"/>
   </fileset>
 
   <path id="compile-classpath">
