--- a/web/WEB-INF/config/default.properties
+++ b/web/WEB-INF/config/default.properties
@@ -4,7 +4,7 @@
 db.driver=com.mysql.jdbc.Driver
 db.jdbcurl=jdbc:mysql://localhost:3306/ohmage?characterEncoding=utf8
 db.username=ohmage
-db.password=&!sickly
+db.password=ohmage123
 
 #
 # LOGGING
